5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1734_2498.log
== SUBMITION (2019-05-16 16:37:41) 
-- CODE:
a=int(input("numero de habitntes na cidade A:  "))
b=int(input("numero de habitntes na cidade B:  "))
creA=float(input("Percentual de crescimento populacional da cidade A  "))
creB=float(input("Percentual de crescimento populacional da cidade B:  "))
cont=0
while(a<b):
	a=((a*creA)/100)+a
	b=((b*creB)/100)+b
	cont=cont+1
print(con)
	
	
-- EXECUTION TIME:
0.180776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2498/main.py", line 10, in <module>
    print(con)
NameError: name 'con' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:37:45) 
-- CODE:
a=int(input("numero de habitntes na cidade A:  "))
b=int(input("numero de habitntes na cidade B:  "))
creA=float(input("Percentual de crescimento populacional da cidade A  "))
creB=float(input("Percentual de crescimento populacional da cidade B:  "))
cont=0
while(a<b):
	a=((a*creA)/100)+a
	b=((b*creB)/100)+b
	cont=cont+1
print(cont)
	
	
-- EXECUTION TIME:
0.16557
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
